<?xml version="1.0"?>
<package format="3">
  <name>leo2_interfaces</name>
  <version>1.1.0</version>
  <description>
    Message definitions for Leo Rover
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="piotr@fictionlab.pl">Piotr Szlachcic</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_common/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_common</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>