<?xml version="1.0"?>
<package format="3">
  <name>raph_interfaces</name>
  <version>0.0.1</version>
  <description>
    Interface definitions for Raph Rover
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="piotr@fictionlab.pl">Piotr Szlachcic</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>