<?xml version="1.0"?>
<package format="3">
  <name>rapha</name>
  <version>1.1.0</version>
  <description>
    Packages for Rapha Rover common to the robot and desktop
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rapha_description</exec_depend>
  <exec_depend>rapha_teleop</exec_depend>
  <exec_depend>rapha_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>